--- a/tex/main.tex
+++ b/tex/main.tex
@@ -22,18 +22,17 @@
 \maketitle
 
 {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-  {\normalfont \itshape Abstract:} Novel \infl  strains emerging into humans from animal reservoirs can cause large antigenic shifts in the circulating strain, and such events are suspected to have triggered numerous  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up} often exacting a devastating toll on human lives. Yet, our current ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans remains limited. In this study, we introduce a computational approach, known as the \enet,  to learn how viable genotypic variations are shaped by  emergent evolutionary constraints using only genomic sequence data of collected strains.    Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains from public  databases, our proposed algorithm merges machine learning and large deviation theory to  estimate the likelihood of  specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. After validating our model on the problem of forecasting the dominant strain(s) of the upcoming flu season, with \enet-based forecasts significantly outperforming World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades for  H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of novel animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in seconds for each new strain, while strongly correlating with the published IRAT scores ($R^2=0.7797$, correlation=0.7037, p-value $= 0.0003$). This  $\times 10^6$ speedup (weeks vs seconds) in  identifying risky strains is necessary to fully exploit the  current surveillance capacity via scalably analyzing tens of thousands of strains collected every year. Thus, our results potentially  enable  meaningful preemptive pandemic mitigation strategies, the relevance of which cannot be overstated in the light of the recent \hcov pandemic.
+  {\normalfont \itshape Abstract:} Novel \infl  strains emerging into humans from animal reservoirs can cause large antigenic shifts in the circulating strain, and such events are suspected to have triggered numerous  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}, often exacting a devastating toll on human lives. Yet, our current ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans remains limited. In this study, we introduce a computational approach, known as the \enet,  to learn how viable genotypic variations are shaped by  emergent evolutionary constraints using only genomic sequence data of collected strains.    Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains from public  databases, our proposed algorithm merges machine learning and large deviation theory to  estimate the likelihood of  specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. After validating our model on the problem of forecasting the dominant strain(s) of the upcoming flu season, with \enet-based forecasts significantly outperforming World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades for  H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of novel animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $6-8$ seconds for each new strain, while strongly correlating with the published IRAT scores (correlation=0.703, p-value $= 0.00026$). This approximately six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to fully exploit the  current surveillance capacity via scalably analyzing tens of thousands of strains collected every year. Thus, our results potentially  enable  meaningful preemptive pandemic avoidance and mitigation strategies, which are especially relevant in the light of the recent COVID-19 pandemic.
 }
   
 \vspace{10pt}
 \section*{Introduction}
-Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing  sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response hinges on  successfully inoculating a substantial fraction of the  population with a  reformulated  vaccine annually~\cite{boni2008vaccination,dos2016influenza}.  Among numerous factors that hinder optimal design of the seasonal flu shot, failing to correctly predict the dominant strain in the upcoming season dramatically reduces vaccine effectiveness~\cite{tricco2013comparing}, and despite  recent advances~\cite{neher2014predicting,huddleston2020integrating} such predictions remain imperfect. In addition to  the seasonal  epidemic, novel \infl strains spilling over into humans from animal reservoirs have triggered  pandemics  at least four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of the  sudden emergence of \cov and the ensuing devastating pandemic fresh in our minds, a looming question  is whether we can  preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, can easily incorporate genes from multiple strains and (re)emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns}, and   harbors  a high potential  of triggering the next  pandemic.
+Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing  sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response hinges on  successfully inoculating a substantial fraction of the  population with a  reformulated  vaccine annually~\cite{boni2008vaccination,dos2016influenza}.  Among numerous factors that hinder optimal design of the seasonal flu shot, failing to correctly predict the dominant strain in the upcoming season dramatically reduces vaccine effectiveness~\cite{tricco2013comparing}, and despite  recent advances~\cite{neher2014predicting,huddleston2020integrating} such predictions remain imperfect. In addition to  the seasonal  epidemic, novel \infl strains spilling over into humans from animal reservoirs have triggered  pandemics  at least four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of the  sudden emergence of \cov and the ensuing devastating pandemic fresh in our minds, a looming question  is whether we can  preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, can easily incorporate genes from multiple strains and (re)emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns}, and   thus harbors  a high potential  of triggering the next  pandemic.
 
 \input{figuresandtables.tex}
 
 A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans but is likely to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate such risk posed to  humans by  individual animal  strains  is severely limited.
 
-\DQS{IRAT description}
 CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in   1) expert-selected properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}. The IRAT score assigns  a grade between 1 and 10 individually for emergence risk and public health impact to Influenza A viruses that are not currently circulating among humans. Evaluating the IRAT score  involves multiple experimental assays for each strain, possibly taking  weeks to return the final   evaluation for a single strain. This causes  a scalability bottleneck: while  the current global biosurveillance efforts annually  collect  thousands of sequences, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of successfully  preempting a pandemic.
 
 \DQS{algo intro 1 }In this study, we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild. These constraints help us to  numerically estimate the probability of a strain $x$ spontaneously giving rise to strain $y$  in the wild, $i.e.$, estimate  $Pr(x \rightarrow y)$, which then allows us to approximate IRAT scores of non-human strains without direct experimental assays, and forecast dominant strains of seasonal epidemics. To uncover relevant evolutionary constraints, we analyze observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimate the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  giving rise to another.  Such explicit calculations are difficult  without first inferring the emergent constraints at play,  as well as  the variation of mutational probabilities and the potential residue replacements from one positional index to the next along the AA sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. 
@@ -46,7 +45,7 @@ We infer the \enet using the AA sequences of HA and NA proteins from  all unique
 Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to model the observed amino acid ``outcome'' at a specific positional index of the proteins using as features (input variables) the residues appearing  at other  locations  (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a particular index, implying that an \enet comprises atmost as many such  position-specific predictors as the length of the AA sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the AA sequence essentially estimates  the conditional residue distribution  at each index. The set of indices acting as features in each tree varies; for example, as shown in the fragment of the  H1N1 HA \enet (2020-2021) in Fig~\ref{figscheme}b, the predictor for index 63 is dependent on the AA residue at index 155, and the predictor for index 155 is dependent on index 223, the predictor for index 223 is dependent on index 14, and the residue at index 14 is dependent on index 63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be recursively ``expanded'' to its own tree. Due to this recursive expansion,  a complete \enet is hard to visualize, nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
 
 
-\DQS{WHy dont we use phenotypic information}
+% \DQS{WHy dont we use phenotypic information}
 As described, for \enet inference we  use AA sequences with no additional phenotypic annotation, other than identifying the host animal (and time and place of collection). This is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of  phenotypic information, $e.g.$ from deep mutational scanning (DMS) assays, has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic information our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies.
 
  
