--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,52 @@
+@article{pulliam2009ability,
+  title={Ability to replicate in the cytoplasm predicts zoonotic transmission of livestock viruses},
+  author={Pulliam, Juliet RC and Dushoff, Jonathan},
+  journal={The Journal of infectious diseases},
+  volume={199},
+  number={4},
+  pages={565--568},
+  year={2009},
+  publisher={The University of Chicago Press}
+}
+@article{grewelle2020larger,
+  title={Larger viral genome size facilitates emergence of zoonotic diseases},
+  author={Grewelle, Richard E},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{wille2021accurately,
+  title={How accurately can we assess zoonotic risk?},
+  author={Wille, Michelle and Geoghegan, Jemma L and Holmes, Edward C},
+  journal={PLoS biology},
+  volume={19},
+  number={4},
+  pages={e3001135},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+@article{grange2021ranking,
+  title={Ranking the risk of animal-to-human spillover for newly discovered viruses},
+  author={Grange, Zo{\"e} L and Goldstein, Tracey and Johnson, Christine K and Anthony, Simon and Gilardi, Kirsten and Daszak, Peter and Olival, Kevin J and O’Rourke, Tammie and Murray, Suzan and Olson, Sarah H and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={118},
+  number={15},
+  pages={e2002324118},
+  year={2021},
+  publisher={National Acad Sciences}
+}
+@article{eng2014predicting,
+  title={Predicting host tropism of influenza A virus proteins using random forest},
+  author={Eng, Christine LP and Tong, Joo Chuan and Tan, Tin Wee},
+  journal={BMC medical genomics},
+  volume={7},
+  number={3},
+  pages={1--11},
+  year={2014},
+  publisher={Springer}
+}
+
 @article{martinez2020characterizing,
   title={Characterizing emerging canine H3 influenza viruses},
   author={Martinez-Sobrido, Luis and Blanco-Lobo, Pilar and Rodriguez, Laura and Fitzgerald, Theresa and Zhang, Hanyuan and Nguyen, Phuong and Anderson, Christopher S and Holden-Wiltse, Jeanne and Bandyopadhyay, Sanjukta and Nogales, Aitor and others},
