--- a/tex/main.tex
+++ b/tex/main.tex
@@ -14,7 +14,30 @@
 \FIGSfalse  
 \FIGStrue 
 
+% Zoonotic risk technology
+% FluLeap~\cite{eng2014predicting} is a machine-learning algorithm
+% that uses sequence data to identify host tropism: classify influenza
+% viruses as either avian or human.
+% PREDICT,  a US\$200-million project funded by the
+% US Agency for International Development
+% (USAID), spent around a decade looking for
+% animal viruses. By the time it ended in 2020, it
+% had identified 949 new viruses in samples from
+% wildlife, livestock and people, in 34 countries
 
+% Zoonotic Risk Technology Enters the Viral Emergence Toolkit
+% Grange $\etal$~\cite{grange2021ranking} look for diverse factors,
+% but are not strain specific assessments, and identify species
+% level risk.
+
+% ~\cite{wille2021accurately} How accurately can we assess zoonotic risk? underscore the
+% inherent challanges in assessing  risk from viruses that have not been studied
+% well enough.
+% genome size may be a useful surrogate in screening for potential zoonotic viruses~\cite{grewelle2020larger}
+%
+% Among these traits-genomic material, genome segmentation, and replication without nuclear entry-the last is the strongest predictor of cross-species transmission. This finding highlights nuclear entry as a barrier to transmission and suggests that the ability to complete replication in the cytoplasm may prove to be a useful indicator of the threat of cross-species transmission. ~\cite{pulliam2009ability}
+
+  
 \tikzexternalenable   
 % \pgfplotsset{compat=1.18}
 \begin{document}  
@@ -31,32 +54,36 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing 
 
 \input{figuresandtables.tex}
 
-A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans but is likely to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate such risk posed to  humans by  individual animal  strains  is severely limited.
+A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans but is likely to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate such risk posed to  humans by  individual animal  strains  is severely limited~\cite{wille2021accurately}. Despite recent progress in dilineating important factors modulating emergence risk~\cite{pulliam2009ability,grewelle2020larger,grange2021ranking}, scalable risk ranking of individual strains remain out of reach.
 
-CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in   1) expert-selected properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}. The IRAT score assigns  a grade between 1 and 10 individually for emergence risk and public health impact to Influenza A viruses that are not currently circulating among humans. Evaluating the IRAT score  involves multiple experimental assays for each strain, possibly taking  weeks to return the final   evaluation for a single strain. This causes  a scalability bottleneck: while  the current global biosurveillance efforts annually  collect  thousands of sequences, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of successfully  preempting a pandemic.
+CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in   1) expert-selected properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}. The IRAT score assigns  a grade between 1 and 10 individually for emergence risk and public health impact to Influenza A strains that are not currently circulating among humans. Evaluating the IRAT score  involves multiple experimental assays for each strain, possibly taking  weeks to return the final   evaluation for a single strain. This causes  a scalability bottleneck: while  the current global biosurveillance efforts annually  collect  thousands of sequences, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of successfully  preempting a \infl pandemic.
 
-In this study, we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild. These constraints help us to  numerically estimate the probability $Pr(x \rightarrow y)$ of a strain $x$ spontaneously giving rise to strain $y$, $i.e.$. This  enables us to preempt strains that would be in circulation in future, and thus 1) forecast dominant strains of seasonal epidemics, and 2) approximate IRAT scores of non-human strains without direct experimental assays. To uncover relevant evolutionary constraints, we analyze observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimate the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the emergent constraints at play,  as well as  the variation of mutational probabilities and the potential residue replacements from one positional index to the next along the AA sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. 
+In this study, we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild. These constraints help us to   estimate the probability $Pr(x \rightarrow y)$ of a strain $x$ spontaneously giving rise to  $y$. This  enables us to preempt which strains would be in circulation in future, and thus 1) forecast dominant strains of seasonal epidemics, and 2) approximate IRAT scores of non-human strains without direct experimental assays.
 
-The  dependencies we uncover are shaped by  a  functional necessity of conserving/augmenting  fitness. A  strain must be sufficiently common  to be recorded, implying that the sequences from public databases that we train  with have  high replicative fitness. Lacking kinetic proofreading  in  RNA-polymerase,  \infl integrates  faulty nucleotides   at a relatively high rate ($10^{-3}$ to $10^{-4}$) during  replication~\cite{ahlquist2002rna,chen2006avian}. However, few   of these variations are actually viable, with only specific patterns  maintaining/gaining fitness;  leading to emergent dependencies between such changes. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these  constraints, automatically reflecting the effect of  evolving host immunity, and the current background strain distribution.  
+To uncover relevant evolutionary constraints, we analyzed observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimated the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the emergent constraints at play,  as well as  the variation of mutational probabilities and the potential residue replacements from one positional index to the next along the AA sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. Similalrly, recently reported algorithms such  as FluLeap~\cite{eng2014predicting} -- which identfies host traopism from sequence data -- and 
+identifiying risky viruses at the species level~\cite{grange2021ranking} do not allow  strain-specific risk assessment for \infl viruses.
+
+The genomic dependencies we uncover are shaped by  a  functional necessity of conserving/augmenting  fitness. A  strain must be sufficiently common  to be recorded, implying that the sequences from public databases that we train  with have  high replicative fitness. Lacking kinetic proofreading  in  RNA-polymerase,  \infl integrates  faulty nucleotides   at a relatively high rate ($10^{-3}$ to $10^{-4}$) during  replication~\cite{ahlquist2002rna,chen2006avian}. However, few   of these variations are actually viable, with only specific patterns  maintaining/gaining fitness;  leading to emergent dependencies between such changes. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these  constraints, automatically reflecting the effect of  evolving host immunity, and the current background strain distribution.  
 
 
-
-Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to model the observed amino acid ``outcome'' at a specific positional index of the proteins using as features (input variables) the residues appearing  at other  locations  (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a particular index, implying that an \enet comprises atmost as many such  position-specific predictors as the length of the AA sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the AA sequence essentially estimates  the conditional residue distribution  at each index. The set of indices acting as features in each tree varies; for example, as shown in the fragment of the  H1N1 HA \enet (2020-2021) in Fig~\ref{figscheme}b, the predictor for index 63 is dependent on the AA residue at index 155, and the predictor for index 155 is dependent on index 223, the predictor for index 223 is dependent on index 14, and the residue at index 14 is dependent on index 63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be recursively ``expanded'' to its own tree. Due to this recursive expansion,  a complete \enet is hard to visualize, nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
+Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to model the observed amino acid ``outcome'' at a specific positional index of the proteins using as features (input variables) the residues appearing  at other  locations  (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a particular index, implying that an \enet comprises atmost as many such  position-specific predictors as the length of the AA sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the AA sequence essentially yields an estimated conditional residue distribution  at each index. The set of indices acting as features in each tree varies; for example, as shown in the fragment of the  H1N1 HA \enet (2020-2021) in Fig~\ref{figscheme}b, the predictor for index 63 is dependent on the AA residue at index 155, and the predictor for index 155 is dependent on index 223, the predictor for index 223 is dependent on index 14, and the residue at index 14 is dependent on index 63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be recursively ``expanded'' to its own tree. Due to this recursive expansion,  a complete \enet is hard to visualize, nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
 
 We infer the \enet using the AA sequences of HA and NA proteins from  all unique \infl strains in the NCBI and GISAID databases between the year 2000 to present time (2022 April), which leads to a set of 98,299 strains in total. We  construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, constructing in total 85 models. % # of models: 16 that i computed + 69 precomputed in quasinet package %Dominant strain forecasts are made for each  season and  each hemisphere separately.
-Thus,  we  use AA sequences with no additional phenotypic annotation, other than identifying the host animal (and time and place of collection). This is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of  phenotypic information, $e.g.$ from deep mutational scanning (DMS) assays, has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic information our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies.
+Thus,  we  use AA sequences with no additional phenotypic annotation, other than identifying the host animal (and time and place of collection). This is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of  phenotypic information, $e.g.$ from deep mutational scanning (DMS) assays, has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic information our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies for \infl.
 
  
-Inference of the \enet components is the first step in our approach, which induces  a new distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in Methods) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the inferred  dependencies, and adapts to the specific organism, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{SI-thmbnd} in Supplementary text) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. %Thus, the \qdist provides a measure of genomic similarity that is substantially more biologically meaningful compared to the common edit distance.
+Inference of the \enet components is the first step in our approach, which then induces  a new distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in Methods) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the inferred  dependencies, and adapts to the specific organism, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{SI-thmbnd} in Supplementary text) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$.
 %
+%Thus, the \qdist provides a measure of genomic similarity that is substantially more biologically meaningful compared to the common edit distance.
+
 The mathematical intuition behind relating  \qdist  to the loglikelihood of spontaneous change  is similar to the prediction of  a biased outcome when we  toss a fair coin. With an overwhelming probability, a sequence of such tosses should result in roughly equal number of heads and tails. However, large deviations, $i.e$, substantial deviations from the expected fraction  do happen, and the probability of such rare events is explicitly quantifiable~\cite{varadhan2010large} with elementary results from large deviation theory. Generalizing to non-uniform conditional probabilities inferred by the \enet, we show  that the likelihood of a spontaneous transition  by random chance may also be similarly bounded. As an important distinction from the edit distance, the \qdist  between two fixed sequences may change even if only the background population changes (SI-Table~\ref{SI-tabex}, example where  the distance between two fixed  sequences vary when we vary their collection years, and hence the environment or the background strain distribution). Thus, we can not only estimate the risk of emergence of a particular animal strain, but can track how that risk evolves over time [Figure ref XXX].
 
 %Sequences may have a large \qdist and a small edit distance, and vice versa (although on average the two distances tend to be positively correlated, see SI-Table~\ref{SI-tabcor}).
 
 
-% \DQS{math formulation}
+\DQS{fix text here}
 
-The ability of the \enet framework to determine the numerical odds of spontaneous jump $ Pr(x \rightarrow y)$ (Fig.~\ref{figscheme}) suggests that we are able to frame the problem of forecasting  dominant strain(s), and that of estimating the  pandemic potential of an animal strain as precise mathematical propositions (albeit with some simplifying assumptions), with  approximate solutions (Fig.~\ref{figscheme}c-d). Thus,  a dominant strain for an upcoming  season may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).  This does not deterministically specify the dominant strain, but a strain satisfying this criterion  has  high odds of emerging as the dominant one. And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
+The ability of the \enet framework to determine the numerical odds of spontaneous jump $ Pr(x \rightarrow y)$ (Fig.~\ref{figscheme}) suggests that we are able to frame the problem of forecasting  dominant strain(s), and that of estimating the  pandemic potential of an animal strain as  mathematical propositions (albeit with some simplifying assumptions), with  approximate solutions (Fig.~\ref{figscheme}c-d). Thus,  a dominant strain for an upcoming  season may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).  This does not deterministically specify the dominant strain, but a strain satisfying this criterion  has  high odds of emerging as the dominant one. And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
 %Thus, the \qdist enables us to estimate the numerical value of the probability $Pr(x \rightarrow y)$, and hence solve the mathematical propositions described above.
 %
 
